# NYCBikes

./: .editorconfig  .gitignore  README.md  main.py  setup_db.py  test.py
backend/: __init__.py  main.py  pyproject.toml  run.bat
backend/api/: deps.py  router.py
backend/api/routes/: accidents_routes.py  import_routes.py  most_accidented_itinerary_routes.py  top_itinerary_routes.py  unique_itinerary_routes.py
backend/config/: config.py
backend/db/: session.py
backend/enums/: bikes_acc_type.py  import_types.py
backend/models/: heatmap_point.py  itinerary.py  top_itinerary.py  unique_itinerary.py
backend/services/: accidents_services.py  api_import_service.py  import_service.py  matching_service.py  most_accidented_itinerary.py  top_itinerary_service.py  unique_itinerary_service.py
frontend/: README.md  angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.css  theme.css
frontend/src/app/: app.config.ts  app.routes.ts  app.ts
frontend/src/app/components/chart/: chart.css  chart.html  chart.ts
frontend/src/app/components/map/: map.css  map.html  map.ts
frontend/src/app/components/pages/home/: home.css  home.html  home.ts
frontend/src/app/components/upload-zone/: upload-zone.css  upload-zone.html  upload-zone.ts
frontend/src/app/models/: chart-data.ts  heatmap-point.ts  itinerary.ts
frontend/src/app/services/: accidents-service.ts  async-http-client.ts  itineraries-service.ts  mai-service.ts
frontend/src/environments/: environment.ts
