[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.133.0,<0.134.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "pymongo[srv] (>=4.16.0,<5.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "pandas (>=3.0.1,<4.0.0)",
    "geopandas (>=1.1.2,<2.0.0)"
]

[dependency-groups]
dev = [
    "uvicorn (>=0.41.0,<0.42.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
